fix: resolve portfolio build and JSX lint errors